--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
+.app_left_col {
+  height: 100vh;
+  overflow-y: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app_right_col {
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* bootstrap lg breakpoint = 992px */
+@media (max-width: 991px) {
+  .app_left_col,
+  .app_right_col {
+    height: 50vh;
   }
 }
